Verify owner reasoning configuration journey